k8s/helm/coder-helm.yaml
---
# Source: coder/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coder
  namespace: coder
  labels:
    helm.sh/chart: coder-2.38.0
    app.kubernetes.io/name: coder
    app.kubernetes.io/instance: coder
    app.kubernetes.io/part-of: coder
    app.kubernetes.io/version: "2.38.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    {}
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: "http"
      port: 80
      targetPort: "http"
      protocol: TCP
  selector:
    app.kubernetes.io/name: coder
    app.kubernetes.io/instance: coder
---
# Source: coder/templates/coder.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels:
    app.kubernetes.io/instance: coder
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: coder
    app.kubernetes.io/part-of: coder
    app.kubernetes.io/version: 2.38.0
    helm.sh/chart: coder-2.38.0
  name: coder
  namespace: coder
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: coder
      app.kubernetes.io/name: coder
  template:
    metadata:
      annotations:
        app.kubernetes.io/component: coderd
      labels:
        app.kubernetes.io/instance: coder
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: coder
        app.kubernetes.io/part-of: coder
        app.kubernetes.io/version: 2.38.0
        helm.sh/chart: coder-2.38.0
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/instance
                  operator: In
                  values:
                  - coder
              topologyKey: kubernetes.io/hostname
            weight: 1
      containers:
      - args:
        - server
        - --external-auth-github-default-provider-enable=false
        command:
        - /opt/coder
        image: ghcr.io/coder/coder:v2.38.0
        imagePullPolicy: IfNotPresent
        lifecycle: {}
        name: coder
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
            scheme: HTTP
          initialDelaySeconds: 0
        resources:
          limits:
            cpu: 2
            memory: 2Gi
          requests:
            cpu: 500m
            memory: 1Gi
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: null
          runAsGroup: 1000
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
        volumeMounts: []
      restartPolicy: Always
      serviceAccountName: coder
      terminationGracePeriodSeconds: 60
      volumes: []
---
# Source: coder/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: coder
  namespace: coder
  labels:
    helm.sh/chart: coder-2.38.0
    app.kubernetes.io/name: coder
    app.kubernetes.io/instance: coder
    app.kubernetes.io/part-of: coder
    app.kubernetes.io/version: "2.38.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    {}
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - name: coder
          # gateway api does not support named ports
          port: 80
  hostnames:
    - "coder.walnuts.dev"
